force-app/main/default/objects/cwbtool__FieldTrack__c/fields/cwbtool__Include_Metadata__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Include_Metadata__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Metadata</label>
    <type>Checkbox</type>
</CustomField>