force-app/main/default/objects/cwbtool__FieldTrack__c/fields/cwbtool__LastAnalyzeOn__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__LastAnalyzeOn__c</fullName>
    <label>Last Analyze On</label>
    <type>DateTime</type>
</CustomField>