force-app/main/default/objects/cwbtool__FieldTrack__c/fields/cwbtool__TotalField__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__TotalField__c</fullName>
    <label>Total Field</label>
    <summaryForeignKey>cwbtool__FieldAnalysis__c.cwbtool__ObjectAnalysis__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>